--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -1,23 +1,32 @@
 spring:
   application:
     name: hrm
+
   datasource:
     url: jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
     username: ${PGUSER}
     password: ${PGPASSWORD}
+    driver-class-name: org.postgresql.Driver
+
   jpa:
     hibernate:
       ddl-auto: none
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
+
   flyway:
     enabled: true
     locations: classpath:db/migration
     baseline-on-migrate: true
     validate-on-migrate: true
+
 jwt:
-    secret-key: "8fB3Kq9x$Zt1@pLh7Qm2#Vr!Wd5Ty*JcGo6UvBn0XyRz%HaPi"
-    expiration: 86400000
+  secret-key: ${JWT_SECRET_KEY}
+  expiration: 86400000
+
 company:
-    email-domain: "congty.abc.com"
+  email-domain: ${EMAIL_DOMAIN}
+
+server:
+  port: 8080
