feat: expose Swagger UI link and clarify leave request API endpoints

--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -27,6 +27,7 @@ springdoc:
   swagger-ui:
     enabled: true
     path: /swagger-ui
+    deep-linking: true
 jwt:
   secret-key: ${JWT_SECRET_KEY}
   access-expiration: ${JWT_ACCESS_EXPIRATION}
