Add attendance import file storage and ignore uploads directory

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+# Upload files (attendance import)
+/uploads/
+
 ### STS ###
 .apt_generated
 .classpath
